# psdr

./: .gitignore  inference.py
example/cpp/: CMakeLists.txt  convert.cpp  detect.cpp
example/python/: anchor.py  bunny.py
psdr/: CMakeLists.txt
psdr/include/: python_binding.h  shape_container.h  shape_detector.h
psdr/src/: python_binding.cpp  shape_container.cpp  shape_detector.cpp
